--- a/web.html
+++ b/web.html
@@ -3,32 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website</title>
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
-    <header>
+    <section class="header">
         <nav>
-            <div class="logo">
-                Travel-x
-            </div>
-            <div class="menu">
-               <a href="#">Home</a>
-               <a href="#">Over Sities</a>
-               <a href="#">Hill Stations</a>
-               <a href="#">Best ofter</a>
-               <a href="#">Contact</a>
-            </div>
-            <div class="register">
-                <a href="#">Register</a>
+            <a href="logo"><img src="https://tse3.mm.bing.net/th?id=OIP.-ozyhB21GfO93dk6dQUlPwHaHa&pid=Api&P=0&h=180" alt=""></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Locations</a></li> 
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Galary</a></li>
+                </ul>
             </div>
         </nav>
-        <section class="h-txt">
-            <span>Enjoy</span>
-            <h1>International Travel Agency</h1>
-            <br>
-            <a href="#">Book your Trip</a>
-        </section>
-    </header>
+<div class="text-box">
+    <h1>BEST FOOD</h1>
+    <P>A great restaurant website can attract new customers and raise the overall profile of your restaurant. <br>
+        Here’s how to create your own restaurant website.</P>
+        <a href="" class="menu-btn">Visit Us To Know More</a>
+</div>        
+    </section>
+<!--------------Food memnu---------->
+<section class="food">
+    <h1>Food We Offer</h1>
+    <p>A great restaurant website supports all of your restaurant marketing activities: it can attract new customers, maintain loyal ones, and raise the overall profile of the establishment outside of the physical location.<br>
+         It's a crucial aspect of running a successful business.
+    </p>
+    <div class="row">
+        <div class="food-col">
+            <h3>Biryani</h3>
+            <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
+                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
+            </p>
+        </div>
+        <div class="row">
+            <div class="food-col">   
+            <h3>fry pirce Biryani</h3>      
+            <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
+                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
+            </p></div>
+            <div class="row">
+                <div class="food-col">   
+                    <h3>chicken fry price biryani</h3>
+                <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
+                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
+                </p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+  
     
 </body>
 </html>
