--- a/web.html
+++ b/web.html
@@ -1,64 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
     <link rel="stylesheet" href="web.css">
 </head>
+
 <body>
     <section class="header">
         <nav>
-            <a href="logo"><img src="https://tse3.mm.bing.net/th?id=OIP.-ozyhB21GfO93dk6dQUlPwHaHa&pid=Api&P=0&h=180" alt=""></a>
+            <a href="logo"><img src="https://tse3.mm.bing.net/th?id=OIP.-ozyhB21GfO93dk6dQUlPwHaHa&pid=Api&P=0&h=180"
+                    alt=""></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Locations</a></li> 
+                    <li><a href="">Locations</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Galary</a></li>
                 </ul>
             </div>
         </nav>
-<div class="text-box">
-    <h1>BEST FOOD</h1>
-    <P>A great restaurant website can attract new customers and raise the overall profile of your restaurant. <br>
-        Here’s how to create your own restaurant website.</P>
-        <a href="" class="menu-btn">Visit Us To Know More</a>
-</div>        
-    </section>
-<!--------------Food memnu---------->
-<section class="food">
-    <h1>Food We Offer</h1>
-    <p>A great restaurant website supports all of your restaurant marketing activities: it can attract new customers, maintain loyal ones, and raise the overall profile of the establishment outside of the physical location.<br>
-         It's a crucial aspect of running a successful business.
-    </p>
-    <div class="row">
-        <div class="food-col">
-            <h3>Biryani</h3>
-            <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
-                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
-            </p>
+        <div class="text-box">
+            <h1>BEST FOOD</h1>
+            <P>A great restaurant website can attract new customers and raise the overall profile of your restaurant.
+                <br>
+                Here’s how to create your own restaurant website.
+            </P>
+            <a href="" class="menu-btn">Visit Us To Know More</a>
         </div>
-        <div class="row">
-            <div class="food-col">   
-            <h3>fry pirce Biryani</h3>      
-            <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
-                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
-            </p></div>
+    </section>
+    <!--------------Food memnu---------->
+    <section class="food">
+        <h1>Food We Offer</h1>
+        <p>A great restaurant website supports all of your restaurant marketing activities: it can attract new
+            customers, maintain loyal ones, and raise the overall profile of the establishment outside of the physical
+            location.<br>
+            It's a crucial aspect of running a successful business.
+        </p>
+        <div class="cards">
             <div class="row">
-                <div class="food-col">   
-                    <h3>chicken fry price biryani</h3>
-                <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
-                 This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
+                <div class="food-col">
+                    <h3>Biryani</h3>
+                    <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and
+                        herbs.<br>
+                        This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan
+                        (gravy).
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="food-col">
+                        <h3>fry pirce Biryani</h3>
+                        <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken
+                            and
+                            herbs.<br>
+                            This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or
+                            salan
+                            (gravy).
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="food-col">
+                            <h3>chicken fry price biryani</h3>
+                            <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices,
+                                chicken
+                                and herbs.<br>
+                                This is a beginners recipe and can be made with ease. Serve chicken biryani with raita
+                                or
+                                salan (gravy).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-----------Items--------->
+    <section class="Items">
+        <h1>Food Items</h1>
+        <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
+            This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).
+        </p>
+        <div class="row">
+            <div class="items-col">
+                <img src="https://tse1.mm.bing.net/th?id=OIP.2g-dT3nt55YRPRmOlkYxsQHaE8&pid=Api&P=0&h=180" alt="">
+                <div class="layer">
+                    <h3>BIRYANI</h3>
+                </div>
+            </div>
+            <div class="items-col">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.5cKK4EpFFOJZaETgZQ2HyAHaEK&pid=Api&P=0&h=180" alt="">
+                <div class="layer">
+                    <h3>BIRYANI22</h3>
+                </div>
+            </div>
+            <div class="items-col">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.byT-TBophsCVesaUEdsXkwHaFj&pid=Api&P=0&h=180" alt="">
+                <div class="layer">
+                    <h3>food1</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------facilities----------->
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and herbs.<br>
+            This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan (gravy).</p>
+        <div class="row">
+            <div class="facilitie-cols">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.bsBZWdXEMqdwhaYjiYk3LgHaE0&pid=Api&P=0&h=180">
+                <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and
+                    herbs.<br>
+                    This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan
+                    (gravy).</p>
+                </p>
+            </div>
+            <div class="facilitie-cols">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.3JcZBmi5rkbNk0-Uo440xAHaDm&pid=Api&P=0&h=180">
+                <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and
+                    herbs.<br>
+                    This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan
+                    (gravy).</p>
+                </p>
+            </div>
+            <div class="facilitie-cols">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.-FhATbyCVqU3r5WZx0lU4wHaFQ&pid=Api&P=0&h=180">
+                <p>Aromatic, delicious and spicy one pot chicken biryani made with basmati rice, spices, chicken and
+                    herbs.<br>
+                    This is a beginners recipe and can be made with ease. Serve chicken biryani with raita or salan
+                    (gravy).</p>
                 </p>
             </div>
         </div>
-    </div>
+    </section>
 
-</section>
-
-  
-    
 </body>
+
 </html>
